[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/EnemigoDistancia.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Brujo/Attack/Attack 06.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Brujo/Death/Death 01.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Brujo/Death/Death 02.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Brujo/Death/Death 03.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Brujo/Death/Death 04.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Brujo/Death/Death 05.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Brujo/Death/Death 06.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Brujo/Death/Death 07.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Brujo/Death/Death 08.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Brujo/Death/Death 09.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 01.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 02.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 03.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 04.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 05.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 06.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 07.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 08.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 09.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Brujo/Idle/Idle 10.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "Atacar",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "Muerte",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": true,
"name": "Quieto",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.0
height = 73.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 416, 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 384, 45 )

[node name="EnemigoDistancia" type="KinematicBody2D" groups=[
"persist",
"enemigo",
]]
z_index = 1
collision_layer = 32
script = ExtResource( 1 )

[node name="AnimacionEnemigo" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "Danio"
frame = 1
playing = true

[node name="ColisionEnemigo" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -17 )
shape = SubResource( 3 )

[node name="CampoDeVision" type="Area2D" parent="."]
collision_layer = 16

[node name="ColisionCampoVision" type="CollisionShape2D" parent="CampoDeVision"]
shape = SubResource( 4 )

[node name="TimerAtaque" type="Timer" parent="."]
one_shot = true

[node name="CampoAtaque" type="Area2D" parent="."]
collision_layer = 16

[node name="ColisionAtaque" type="CollisionShape2D" parent="CampoAtaque"]
position = Vector2( 0, 17 )
shape = SubResource( 5 )

[node name="Position2DDisparo" type="Position2D" parent="."]
position = Vector2( -60, -6 )

[connection signal="animation_finished" from="AnimacionEnemigo" to="." method="_on_AnimacionEnemigo_animation_finished"]
[connection signal="body_entered" from="CampoDeVision" to="." method="_on_CampoDeVision_body_entered"]
[connection signal="body_exited" from="CampoDeVision" to="." method="_on_CampoDeVision_body_exited"]
[connection signal="body_entered" from="CampoAtaque" to="." method="_on_CampoAtaque_body_entered"]
